<resources>
    <string name="app_name">Planszówki</string>
    <string name="action_settings">Konfiguracja</string>
    <string name="event_name_default">planszówki</string>
    <string name="event_select_date_time">wybierz datę i czas</string>
    <string name="button_cancel">anuluj</string>
    <string name="button_ok">ok</string>
    <string name="event_name_hint">Nazwa:</string>
    <string name="event_date_time_label">Data i czas:</string>
    <string name="event_vote_yes">będę</string>
    <string name="event_vote_no">niepasuje</string>
    <string name="title_activity_login">Login for the insiders</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Name</string>
    <string name="prompt_password">Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_login_incorrect">Incorrect name or password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_name_required">This field is required. Min. %c chars long.</string>
</resources>
